<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp">
            <Button
                android:id="@+id/normal_recipe"
                android:layout_width="360dp"
                android:layout_height="200dp"
                android:layout_marginTop="100dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/normal_recipe"
                android:text="@string/normal_recipe"
                android:textColor="@drawable/text1"
                android:textSize="20sp"
                android:background="@color/white"/>
            <Button
                android:id="@+id/professional_recipe"
                android:layout_width="360dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/professional_recipe"
                android:background="@color/white"
                android:text="@string/professional_recipe"
                android:textColor="@drawable/text1"
                android:textSize="20sp"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/personal_recipe"
                android:layout_width="360dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:drawableTop="@drawable/personal_recipe"
                android:textSize="20sp"
                android:textColor="@drawable/text1"
                android:background="@color/white"
                android:text="@string/personal_recipe"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>