<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.example.diet.PersonalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center_horizontal">
                    <ImageView
                        android:id="@+id/iv_show"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:background="@drawable/background3" />
                </LinearLayout>

                <com.example.diet.BallView
                    android:id="@+id/percentageBall"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"/>

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/frame"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/txt_cal"
                                    android:layout_width="240dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="2"
                                    android:text="@string/calorie"
                                    android:textSize="20dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:text="0kCal"
                                    android:textSize="20dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/txt_pro"
                                    android:layout_width="250dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="20dp"
                                    android:layout_weight="2"
                                    android:text="@string/protein"
                                    android:textSize="20dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="20dp"
                                    android:layout_weight="1"
                                    android:text="0Cal"
                                    android:textSize="20dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/txt_fat"
                                    android:layout_width="250dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="20dp"
                                    android:layout_weight="2"
                                    android:text="@string/fat"
                                    android:textSize="20dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="20dp"
                                    android:layout_weight="1"
                                    android:text="0Cal"
                                    android:textSize="20dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/txt_carbohydrate"
                                    android:layout_width="250dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="20dp"
                                    android:layout_weight="2"
                                    android:text="@string/carbohydrate"
                                    android:textSize="20dp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="20dp"
                                    android:layout_weight="1"
                                    android:text="0Cal"
                                    android:textSize="20dp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                        </LinearLayout>

                    </LinearLayout>

                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="372dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/frame"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="41dp"
                                android:layout_height="48dp"
                                android:src="@drawable/advice" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"
                                android:text="@string/sys_advice"
                                android:textSize="20dp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/sys_advice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="你真棒！"
                            android:textSize="20dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="372dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/frame"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_breakfast"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/btn_back"
                            android:drawableTop="@drawable/breakfast3"
                            android:text="@string/breakfast"
                            android:textColor="@drawable/text1" />

                        <Button
                            android:id="@+id/btn_lunch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/btn_back"
                            android:drawableTop="@drawable/lunch"
                            android:text="@string/lunch"
                            android:textColor="@drawable/text1" />

                        <Button
                            android:id="@+id/btn_dinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/btn_back"
                            android:drawableTop="@drawable/dinner"
                            android:text="@string/dinner"
                            android:textColor="@drawable/text1" />

                        <Button
                            android:id="@+id/btn_extra_meal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/btn_back"
                            android:drawableTop="@drawable/extra_meal"
                            android:text="@string/extra_meal"
                            android:textColor="@drawable/text1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageButton
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/add"
                            android:scaleType="centerInside"
                            android:background="@drawable/btn_back"
                            android:layout_marginTop="15dp"
                            android:layout_weight="1"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </com.example.diet.PersonalScrollView>


    </LinearLayout>
